[tool.poetry]
name = "pyplay"
version = "0.1.0"
description = ""
authors = ["tetsu-sh <tetsusinmyou@yahoo.co.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11"
mypy = "^0.991"
black = "^22.12.0"
isort = "^5.12.0"
fastapi = "^0.92.0"
pydantic = "^1.10.5"
uvicorn = "^0.20.0"
sqlalchemy = "^2.0.3"
bcrypt = "^4.0.1"
injector = "^0.20.1"
mysqlclient = "^2.1.1"
alembic = "^1.9.4"
pymysql = "^1.0.2"
sqlalchemy-utils = "^0.40.0"
passlib = "^1.7.4"


[tool.poetry.group.dev.dependencies]
pylint = "^2.16.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
